--- a/code.ser/src/App.css
+++ b/code.ser/src/App.css
@@ -1235,3 +1235,7 @@ hr {
 .ssil_1177:hover {
   text-decoration: underline;
 }
+
+.printable-pdf-container {
+  font-family: "Noto Serif Khitan Small Script", serif;
+}
